Fix underline coloring

--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -100,6 +100,7 @@
         --paper-checkbox-unchecked-color: var(--light-gray);
         --paper-checkbox-unchecked-ink-color: var(--primary-green);
       }
+      /* rtl:begin:ignore */
       paper-input {
         /* Removes extra padding added by children of paper-input */
         margin-top: -8px;
@@ -121,6 +122,7 @@
         };
         --paper-input-container-invalid-color: #f28b82;
       }
+      /* rtl:end:ignore */
       paper-input[readonly] {
         --paper-input-container-underline: {
           display: none;
