Disable editing key port for old servers (#513)
* Disable editing key port for old servers

* Use -1 instead of the current port number, nits

* Be more conservative with the response code check

--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -501,6 +501,7 @@
             server-hostname="[[serverHostname]]"
             server-management-api-url="[[serverManagementApiUrl]]"
             server-port-for-new-access-keys="[[serverPortForNewAccessKeys]]"
+            is-access-key-port-editable="[[isAccessKeyPortEditable]]"
             server-creation-date="[[serverCreationDate]]"
             server-monthly-cost="[[monthlyCost]]"
             server-monthly-transfer-limit="[[_formatBytesTransferred(monthlyOutboundTransferBytes)]]"
@@ -540,6 +541,7 @@
         serverHostname: String,
         serverManagementApiUrl: String,
         serverPortForNewAccessKeys: Number,
+        isAccessKeyPortEditable: {type: Boolean, value: false},
         serverCreationDate: String,
         serverLocation: String,
         isServerManaged: Boolean,
