--- a/src/server_manager/ui_components/app-root.html
+++ b/src/server_manager/ui_components/app-root.html
@@ -461,6 +461,7 @@
           type: Object,
           readonly: true,
           value: {
+            am: {id: 'am', dir: 'ltr'},
             ar: {id: 'ar', dir: 'rtl'},
             bg: {id: 'bg', dir: 'ltr'},
             ca: {id: 'ca', dir: 'ltr'},
