Move app-root js to Typescript

--- a/src/server_manager/index.html
+++ b/src/server_manager/index.html
@@ -24,6 +24,7 @@
   <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
   <link rel="import" href="/bower_components/app-layout/app-toolbar/app-toolbar.html">
   <link rel="import" href="/ui_components/app-root.html">
+  <!-- TODO: Move this to app-root.ts -->
   <script src="/bower_components/outline-i18n/index.js"></script>
   <script src="server_manager/web_app/main.js"></script>
 
