--- a/src/server_manager/ui_components/app-root.html
+++ b/src/server_manager/ui_components/app-root.html
@@ -38,6 +38,7 @@
 <link rel="import" href="./outline-server-progress-step.html">
 <link rel="import" href="./outline-server-view.html">
 <link rel="import" href="./outline-tos-view.html">
+<link rel='import' href='./outline-share-dialog.html'>
 
 <dom-module id="app-root">
   <template>
@@ -449,410 +450,4 @@
 
     </div>
   </template>
-  <script>
-    const TOS_ACK_LOCAL_STORAGE_KEY = 'tos-ack';
-    Polymer({
-      is: 'app-root',
-      behaviors: [
-        Polymer.AppLocalizeBehavior
-      ],
-      properties: {
-        LANGUAGES_AVAILABLE: {
-          type: Object,
-          readonly: true,
-          value: {
-            am: {id: 'am', dir: 'ltr'},
-            ar: {id: 'ar', dir: 'rtl'},
-            bg: {id: 'bg', dir: 'ltr'},
-            ca: {id: 'ca', dir: 'ltr'},
-            cs: {id: 'cs', dir: 'ltr'},
-            da: {id: 'da', dir: 'ltr'},
-            de: {id: 'de', dir: 'ltr'},
-            el: {id: 'el', dir: 'ltr'},
-            en: {id: 'en', dir: 'ltr'},
-            'es-419': {id: 'es-419', dir: 'ltr'},
-            fa: {id: 'fa', dir: 'rtl'},
-            fi: {id: 'fi', dir: 'ltr'},
-            fil: {id: 'fil', dir: 'ltr'},
-            fr: {id: 'fr', dir: 'ltr'},
-            he: {id: 'he', dir: 'rtl'},
-            hi: {id: 'hi', dir: 'ltr'},
-            hr: {id: 'hr', dir: 'ltr'},
-            hu: {id: 'hu', dir: 'ltr'},
-            id: {id: 'id', dir: 'ltr'},
-            it: {id: 'it', dir: 'ltr'},
-            ja: {id: 'ja', dir: 'ltr'},
-            ko: {id: 'ko', dir: 'ltr'},
-            km: {id: 'km', dir: 'ltr'},
-            lt: {id: 'lt', dir: 'ltr'},
-            lv: {id: 'lv', dir: 'ltr'},
-            nl: {id: 'nl', dir: 'ltr'},
-            no: {id: 'no', dir: 'ltr'},
-            pl: {id: 'pl', dir: 'ltr'},
-            'pt-BR': {id: 'pt-BR', dir: 'ltr'},
-            ro: {id: 'ro', dir: 'ltr'},
-            ru: {id: 'ru', dir: 'ltr'},
-            sk: {id: 'sk', dir: 'ltr'},
-            sl: {id: 'sl', dir: 'ltr'},
-            sr: {id: 'sr', dir: 'ltr'},
-            'sr-Latn': {id: 'sr-Latn', dir: 'ltr'},
-            sv: {id: 'sv', dir: 'ltr'},
-            th: {id: 'th', dir: 'ltr'},
-            tr: {id: 'tr', dir: 'ltr'},
-            uk: {id: 'uk', dir: 'ltr'},
-            ur: {id: 'ur', dir: 'rtl'},
-            vi: {id: 'vi', dir: 'ltr'},
-            zh: {id: 'zh', dir: 'ltr'},
-            'zh-CN': {id: 'zh-CN', dir: 'ltr'},
-            'zh-TW': {id: 'zh-TW', dir: 'ltr'},
-          }
-        },
-        DEFAULT_LANGUAGE: {
-          type: String,
-          readonly: true,
-          value: 'en'
-        },
-        useKeyIfMissing: {
-          type: Boolean,
-          value: true
-        },
-        language: {
-          type: String,
-          readonly: true,
-          computed: '_computeLanguage(LANGUAGES_AVAILABLE, DEFAULT_LANGUAGE)'
-        },
-        serverList: {
-          type: Array,
-          value: [],
-        },
-        selectedServer: {
-          type: Object, // DisplayServer in display_server.ts
-          value: undefined,
-        },
-        hasManualServers: {
-          type: Boolean,
-          computed: '_computeHasManualServers(serverList.*)',
-        },
-        adminEmail: {
-          type: String,
-          value: ''
-        },
-        isSignedInToDigitalOcean: {
-          type: Boolean,
-          computed: '_computeIsSignedInToDigitalOcean(adminEmail)'
-        },
-        outlineVersion: String,
-        userAcceptedTos: {
-          type: Boolean,
-           // Get notified when the user clicks the OK button in the ToS view
-          observer: '_userAcceptedTosChanged',
-        },
-        hasAcceptedTos: {
-          type: Boolean,
-          computed: '_computeHasAcceptedTermsOfService(userAcceptedTos)'
-        },
-        currentPage: {
-          type: String,
-          value: 'intro'
-        },
-        shouldShowSideBar: {
-          type: Boolean,
-          value: false
-        },
-        sideBarMarginClass: {
-          type: String,
-          computed: '_computeSideBarMarginClass(shouldShowSideBar)'
-        },
-      },
-      listeners: {
-        'RegionSelected': 'handleRegionSelected',
-        'MetricsChoiceSelected': 'handleMetricsChoiceSelected',
-        'SetUpGenericCloudProviderRequested': 'handleSetUpGenericCloudProviderRequested',
-        'SetUpAwsRequested': 'handleSetUpAwsRequested',
-        'SetUpGcpRequested': 'handleSetUpGcpRequested',
-        'ManualServerEntryCancelled': 'handleManualCancelled'
-      },
-      ready: function() {
-        const messagesUrl = `/messages/${this.language}.json`;
-        this.loadResources(messagesUrl, this.language);
-        const languageProperties = this.LANGUAGES_AVAILABLE[this.language];
-        if (languageProperties && languageProperties.dir === 'rtl') {
-          document.documentElement.setAttribute('dir', 'rtl');
-          this.$.appDrawer.align = 'right';
-          this.$.sideBar.align = 'right';
-        }
-      },
-      showIntro: function () {
-        this.maybeCloseDrawer();
-        this.selectedServer = undefined;
-        this.currentPage = 'intro';
-      },
-      getDigitalOceanOauthFlow: function (onCancel) {
-        const oauthFlow = this.$.digitalOceanOauth;
-        oauthFlow.onCancel = onCancel;
-        return oauthFlow;
-      },
-      showDigitalOceanOauthFlow: function () {
-        this.currentPage = 'digitalOceanOauth';
-      },
-      getAndShowDigitalOceanOauthFlow: function (onCancel) {
-        this.currentPage = 'digitalOceanOauth';
-        const oauthFlow = this.getDigitalOceanOauthFlow(onCancel);
-        oauthFlow.showConnectAccount();
-        return oauthFlow;
-      },
-      getAndShowRegionPicker: function () {
-        this.currentPage = 'regionPicker';
-        this.$.regionPicker.init();
-        return this.$.regionPicker;
-      },
-      getManualServerEntry: function() {
-        return this.$.manualEntry;
-      },
-      showProgress: function (serverName, showCancelButton) {
-        this.currentPage = 'serverProgressStep';
-        this.$.serverProgressStep.serverName = serverName;
-        this.$.serverProgressStep.showCancelButton = showCancelButton;
-        this.$.serverProgressStep.start();
-      },
-      showServerView: function () {
-        this.$.serverProgressStep.stop();
-        this.currentPage = 'serverView';
-      },
-      getServerView: function(displayServerId) {
-        if (!displayServerId) {
-          return null;
-        }
-        const selectedServerId = this._base64Encode(displayServerId);
-        return this.$.serverView.querySelector(`#serverView-${selectedServerId}`);
-      },
-      handleRegionSelected: function (e) {
-        this.fire('SetUpServerRequested', {
-          regionId: this.$.regionPicker.getSelectedRegionId()
-        });
-      },
-      handleSetUpGenericCloudProviderRequested: function () {
-        this.handleManualServerSelected('generic');
-      },
-      handleSetUpAwsRequested: function() {
-        this.handleManualServerSelected('aws');
-      },
-      handleSetUpGcpRequested: function() {
-        this.handleManualServerSelected('gcp');
-      },
-      handleManualServerSelected: function(cloudProvider) {
-        this.$.manualEntry.clear();
-        this.$.manualEntry.cloudProvider = cloudProvider;
-        this.currentPage = 'manualEntry';
-      },
-      handleManualCancelled: function() {
-        this.currentPage = 'intro';
-      },
-      showError: function (errorMsg) {
-        this.showToast(errorMsg, Infinity);
-      },
-      showNotification: function (message, durationMs=3000) {
-        this.showToast(message, durationMs);
-      },
-      showToast: function(message, duration) {
-        const toast = this.$.toast;
-        toast.close();
-        // Defer in order to trigger the toast animation, otherwise the
-        // update happens in place.
-        setTimeout(() => {
-          toast.show({
-            text: message,
-            duration: duration,
-            noOverlap: true
-          });
-        }, 0);
-      },
-      closeError: function () {
-        this.$.toast.close();
-      },
-      // cb is a function which accepts a single boolean which is true iff
-      // the user chose to retry the failing operation.
-      showConnectivityDialog: function (cb) {
-        const dialogTitle = this.localize('error-connectivity-title');
-        const dialogText = this.localize('error-connectivity');
-        this.showModalDialog(dialogTitle, dialogText, [this.localize('cancel'), this.localize('retry')])
-        .then((clickedButtonIndex) => {
-          cb(clickedButtonIndex === 1);  // pass true if user clicked retry
-        });
-      },
-      getConfirmation: function(title, text, confirmButtonText, continueFunc) {
-        this.showModalDialog(title, text, [this.localize('cancel'), confirmButtonText])
-        .then((clickedButtonIndex) => {
-          if (clickedButtonIndex === 1) {  // user clicked to confirm.
-            continueFunc();
-          }
-        });
-      },
-      showManualServerError: function (errorTitle, errorText) {
-        this.showModalDialog(errorTitle, errorText, [this.localize('cancel'), this.localize('retry')])
-            .then((clickedButtonIndex) => {
-              if (clickedButtonIndex == 1) {
-                this.$.manualEntry.retryTapped();
-              } else {
-                this.$.manualEntry.cancelTapped();
-              }
-            });
-      },
-      _computeIsSignedInToDigitalOcean: function (adminEmail) {
-        return Boolean(adminEmail);
-      },
-      _computeHasManualServers: function(serverList) {
-        return this.serverList.filter(server => !server.isManaged).length > 0;
-      },
-      _userAcceptedTosChanged: function(userAcceptedTos) {
-        if (userAcceptedTos) {
-          window.localStorage[TOS_ACK_LOCAL_STORAGE_KEY] = Date.now();
-        }
-      },
-      _computeHasAcceptedTermsOfService: function(userAcceptedTos) {
-        return userAcceptedTos || !!window.localStorage[TOS_ACK_LOCAL_STORAGE_KEY];
-      },
-      _toggleAppDrawer: function() {
-        const drawerNarrow = this.$.drawerLayout.narrow;
-        const forceNarrow = this.$.drawerLayout.forceNarrow;
-        if (drawerNarrow) {
-          if (forceNarrow) {
-            // The window width is below the responsive threshold. Do not force narrow mode.
-            this.$.drawerLayout.forceNarrow = false;
-          }
-          this.$.appDrawer.toggle();
-        } else {
-          // Forcing narrow mode when the window width is above the responsive threshold effectively
-          // collapses the drawer. Conversely, reverting force narrow expands the drawer.
-          this.$.drawerLayout.forceNarrow = !forceNarrow;
-        }
-      },
-      maybeCloseDrawer: function() {
-        if (this.$.drawerLayout.narrow || this.$.drawerLayout.forceNarrow) {
-          this.$.appDrawer.close();
-        }
-      },
-      submitFeedbackTapped: function () {
-        this.$.feedbackDialog.open();
-      },
-      aboutTapped: function() {
-        this.$.aboutDialog.open();
-      },
-      signOutTapped: function() {
-        this.fire('SignOutRequested');
-      },
-      openManualInstallFeedback: function(prepopulatedMessage) {
-        this.$.feedbackDialog.open(prepopulatedMessage, true);
-      },
-      openShareDialog: function(accessKey, s3Url) {
-        this.$.shareDialog.open(accessKey, s3Url);
-      },
-      openGetConnectedDialog: function(inviteUrl) {
-        const dialog = this.$.getConnectedDialog;
-        if (dialog.children.length > 1) {
-          return;  // The iframe is already loading.
-        }
-        // Reset the iframe's state, by replacing it with a newly constructed
-        // iframe. Unfortunately the location.reload API does not work in our case due to
-        // this Chrome error:
-        // "Blocked a frame with origin "outline://web_app" from accessing a cross-origin frame."
-        const iframe = document.createElement('iframe');
-        iframe.onload = function() {
-          dialog.open();
-        };
-        iframe.src = inviteUrl;
-        dialog.insertBefore(iframe, dialog.children[0]);
-      },
-      closeGetConnectedDialog: function() {
-        const dialog = this.$.getConnectedDialog;
-        dialog.close();
-        const oldIframe = dialog.children[0];
-        dialog.removeChild(oldIframe);
-      },
-      showMetricsDialogForNewServer: function() {
-        this.$.metricsDialog.showMetricsOptInDialog();
-      },
-      // Returns a Promise which fulfills with the index of the button clicked.
-      showModalDialog: function(title, text, buttons) {
-        return this.$.modalDialog.open(title, text, buttons);
-      },
-      closeModalDialog: function(title, text, buttons) {
-        return this.$.modalDialog.close();
-      },
-      showLicensesTapped: function () {
-        var xhr = new XMLHttpRequest();
-        xhr.onload = () => {
-          this.$.licensesText.innerText = xhr.responseText;
-          this.$.licenses.open();
-        };
-        xhr.onerror = () => {
-          console.error('could not load license.txt');
-        };
-        xhr.open('GET', '/ui_components/licenses/licenses.txt', true);
-        xhr.send();
-      },
-      _computeShouldShowSideBar: function() {
-        const drawerNarrow = this.$.drawerLayout.narrow;
-        const drawerOpened = this.$.appDrawer.opened;
-        if (drawerOpened && drawerNarrow) {
-          this.shouldShowSideBar = false;
-        } else {
-          this.shouldShowSideBar = drawerNarrow;
-        }
-      },
-      _computeSideBarMarginClass: function(shouldShowSideBar) {
-        return shouldShowSideBar ? 'side-bar-margin' : '';
-      },
-      _isServerManaged: function(server) {
-        return server.isManaged;
-      },
-      _isServerManual: function(server) {
-        return !server.isManaged;
-      },
-      _sortServersByName: function(a, b) {
-        const aName = a.name.toUpperCase();
-        const bName = b.name.toUpperCase();
-        if (aName < bName) {
-          return -1;
-        } else if (aName > bName) {
-          return 1;
-        }
-        return 0;
-      },
-      _computeServerClasses: function(selectedServer, server) {
-        let serverClasses = [];
-        if (this._isServerSelected(selectedServer, server)) {
-          serverClasses.push('selected');
-        }
-        if (!server.isSynced) {
-          serverClasses.push('syncing')
-        }
-        return serverClasses.join(' ');
-      },
-      _computeServerImage: function(selectedServer, server) {
-        if (this._isServerSelected(selectedServer, server)) {
-          return 'server-icon-selected.png';
-        }
-        return 'server-icon.png';
-      },
-      _isServerSelected: function(selectedServer, server) {
-        return !!selectedServer && selectedServer.id === server.id;
-      },
-      _showServer: function(event) {
-        const server = event.model.server;
-        this.fire('ShowServerRequested', {displayServerId: server.id });
-        this.maybeCloseDrawer();
-      },
-      _computeLanguage: function (LANGUAGES_AVAILABLE, DEFAULT_LANGUAGE) {
-        return OutlineI18n.getBestMatchingLanguage(
-          Object.keys(LANGUAGES_AVAILABLE)) || DEFAULT_LANGUAGE;
-      },
-      // Wrapper to encode a string in base64. This is necessary to set the server view IDs to
-      // the display server IDs, which are URLs, so they can be used with selector methods. The IDs
-      // are never decoded.
-      _base64Encode: function(s) {
-        return btoa(s).replace(/=/g, '');
-      },
-    });
-  </script>
 </dom-module>
