UI for setting the hostname for access key invitations
This also includes some random typo fixes and QOL improvements.

To test, you can use

    export SB_IMAGE=cohenjongoogle/shadowbox:latest
    yarn do shadowbox/docker/run

then in a different terminal

    yarn do server_manager/electron_app/run

and add the server

--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -499,6 +499,7 @@
             id="serverSettings"
             server-id="[[serverId]]"
             server-hostname="[[serverHostname]]"
+            is-hostname-editable="[[isHostnameEditable]]"
             server-management-api-url="[[serverManagementApiUrl]]"
             server-port-for-new-access-keys="[[serverPortForNewAccessKeys]]"
             is-access-key-port-editable="[[isAccessKeyPortEditable]]"
@@ -539,6 +540,7 @@
         serverId: String,
         serverName: String,
         serverHostname: String,
+        isHostnameEditable: {type: Boolean, value: false},
         serverManagementApiUrl: String,
         serverPortForNewAccessKeys: Number,
         isAccessKeyPortEditable: {type: Boolean, value: false},
